fix: wrong font-family in button

--- a/main.css
+++ b/main.css
@@ -41,6 +41,7 @@ body {
   border: 3px solid #aa9755;
   backface-visibility: hidden;
   white-space: nowrap;
+  font-family: 'Lato', sans-serif;
 }
 .custom-btn:active{
   -webkit-transform: translateY(2px);
